--- a/project3_graph.ipynb
+++ b/project3_graph.ipynb
@@ -95,6 +95,11 @@
     "        for node in self.vertex:\n",
     "            if self.vertex[node] != 0:\n",
     "                node = random.choice([-1, 1])\n",
+    "    def getM(self):\n",
+    "        sum = 0\n",
+    "        for vertex in self.vertex:\n",
+    "            sum += self.vertex\n",
+    "        return sum\n",
     "\n",
     "def flattened_index(coords, N):\n",
     "        \"\"\"\n",
