--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -18,44 +18,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import lattice\n",
     "import metroplois2\n",
-    "import graph\n",
-    "\n"
+    "import graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "'module' object is not callable",
+     "evalue": "'list' object is not callable",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m T \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m4\u001b[39m]\n\u001b[0;32m      2\u001b[0m square_lattice \u001b[38;5;241m=\u001b[39m Lattice(J \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m square_graph \u001b[38;5;241m=\u001b[39m \u001b[43mgraph\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m square_graph\u001b[38;5;241m.\u001b[39minitialize(square_lattice)\n\u001b[0;32m      5\u001b[0m Squr_alg \u001b[38;5;241m=\u001b[39m Metroplois(square_graph, T)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'module' object is not callable"
+      "Cell \u001b[1;32mIn[6], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m square_lattice \u001b[38;5;241m=\u001b[39m graph(\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      3\u001b[0m Squr_alg \u001b[38;5;241m=\u001b[39m Metroplois(square_lattice, T)\n\u001b[1;32m----> 4\u001b[0m Squr_alg\u001b[38;5;241m.\u001b[39mevaluate_delta([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m])\n",
+      "File \u001b[1;32m~\\ComputationalPhy\\Comp_physics_project3\\Comp_physics_project3\\metroplois2.py:35\u001b[0m, in \u001b[0;36mMetroplois.evaluate_delta\u001b[1;34m(self, node)\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mevaluate_delta\u001b[39m(\u001b[38;5;28mself\u001b[39m, node):\n\u001b[1;32m---> 35\u001b[0m     delta \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgraph\u001b[38;5;241m.\u001b[39mget_delta(node)\n\u001b[0;32m     36\u001b[0m     k \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     37\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m delta \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m random(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mexp(\u001b[38;5;241m-\u001b[39mdelta\u001b[38;5;241m/\u001b[39m(k\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mT)):\n",
+      "File \u001b[1;32m~\\ComputationalPhy\\Comp_physics_project3\\Comp_physics_project3\\graph.py:137\u001b[0m, in \u001b[0;36mgraph.get_delta\u001b[1;34m(self, node)\u001b[0m\n\u001b[0;32m    135\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_delta\u001b[39m(\u001b[38;5;28mself\u001b[39m, node):\n\u001b[0;32m    136\u001b[0m         \u001b[38;5;66;03m#flips a node or sections of nodes and gets the energy delta\u001b[39;00m\n\u001b[1;32m--> 137\u001b[0m         before\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgetE(node)\n\u001b[0;32m    138\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mflip(node)\n\u001b[0;32m    139\u001b[0m         after \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgetE(node)\n",
+      "File \u001b[1;32m~\\ComputationalPhy\\Comp_physics_project3\\Comp_physics_project3\\graph.py:76\u001b[0m, in \u001b[0;36mgraph.getE\u001b[1;34m(self, nodes)\u001b[0m\n\u001b[0;32m     74\u001b[0m completed_pairs \u001b[38;5;241m=\u001b[39m [] \u001b[38;5;66;03m#keep track of pairs that are already checked\u001b[39;00m\n\u001b[0;32m     75\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m nodes:\n\u001b[1;32m---> 76\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m neighbor \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39madj(node):\n\u001b[0;32m     77\u001b[0m         pair \u001b[38;5;241m=\u001b[39m [node, neighbor]\n\u001b[0;32m     78\u001b[0m         pair_inv \u001b[38;5;241m=\u001b[39m [neighbor, node]\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
      ]
     }
    ],
    "source": [
-    "\n",
     "T = [0, 4]\n",
-    "square_lattice = Lattice(J = 1)\n",
+    "square_lattice = lattice.Lattice(J = 1)\n",
     "square_graph = graph(1)\n",
+    "square_graph.display()\n",
     "square_graph.initialize(square_lattice)\n",
-    "Squr_alg = Metroplois(square_graph, T)\n",
-    "Squr_alg.run_metroplois(200)\n",
-    "\n",
-    "# T_spins = square_df.values.sum()"
+    "Squr_alg = metroplois2.Metroplois(square_graph, T)\n",
+    "Squr_alg.run_metroplois(200)\n"
    ]
   },
   {
@@ -82,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
