Update Ising Model (Updated).ipynb

--- a/modules/Ising Model (Updated).ipynb
+++ b/modules/Ising Model (Updated).ipynb
@@ -314,10 +314,11 @@
     "            for j in range(steps):\n",
     "                self.update_lat(beta)      \n",
     "                \n",
-    "                mag = curr_lat.getM()\n",
-    "                total_mag += mag\n",
+    "                if (j >= steps - 100):\n"
+    "                  mag = curr_lat.getM()\n"
+    "                  total_mag += mag\n"
     "\n",
-    "            magnetism[i] = total_mag / (steps * curr_lat.N_x * curr_lat.N_y)\n",
+    "            magnetism[i] = total_mag / (100 * curr_lat.N_x * curr_lat.N_y)\n",
     "            \n",
     "        # plot and find Tc\n",
     "        fit(temp_steps, abs(magnetism))\n",
