--- a/old stuff (not used)/project3_graph.ipynb
+++ b/old stuff (not used)/project3_graph.ipynb
@@ -78,6 +78,7 @@
     "            for neighbor in self.adj[node]:\n",
     "                sum += self.vertex[neighbor] * self.vertex[node]\n",
     "\n",
+    "        \n",
     "        else: #if multiple nodes\n",
     "            completed_pairs = [] #keep track of pairs that are already checked\n",
     "            for node in nodes:\n",
@@ -94,6 +95,7 @@
     "        for node in self.vertex:\n",
     "            if self.vertex[node] != 0:\n",
     "                node = random.choice([-1, 1])\n",
+    "    \n",
     "    def getM(self):\n",
     "        sum = 0\n",
     "        for vertex in self.vertex:\n",
@@ -324,6 +326,44 @@
     "square_graph.flip([0, 25, 99])\n",
     "print(square_graph.vertex)\n",
     "print(square_graph.getE(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "check\n",
+      "3\n",
+      "[ 1 -1  1 -1  1  1 -1 -1 -1 -1  1  1 -1 -1 -1 -1  1  1  1  0 -1 -1  1  1\n",
+      "  1  1  1  1  0  0 -1  1 -1  1 -1  1 -1  0  0  0 -1 -1  1 -1  1 -1  0  0\n",
+      "  0  0 -1 -1 -1  1  1  0  0  0  0  0  1 -1  1  1  0  0  0  0  0  0 -1  1\n",
+      " -1  0  0  0  0  0  0  0  1 -1  0  0  0  0  0  0  0  0  1  0  0  0  0  0\n",
+      "  0  0  0  0]\n",
+      "[-1 -1  1 -1  1  1 -1 -1 -1 -1  1  1 -1 -1 -1 -1  1  1  1  0 -1 -1  1  1\n",
+      "  1 -1  1  1  0  0 -1  1 -1  1 -1  1 -1  0  0  0 -1 -1  1 -1  1 -1  0  0\n",
+      "  0  0 -1 -1 -1  1  1  0  0  0  0  0  1 -1  1  1  0  0  0  0  0  0 -1  1\n",
+      " -1  0  0  0  0  0  0  0  1 -1  0  0  0  0  0  0  0  0  1  0  0  0  0  0\n",
+      "  0  0  0  0]\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "triangle_lattice = Lattice(J = 1, shape = True)\n",
+    "tri_df = triangle_lattice.get_lattice()\n",
+    "tri_graph = graph(1)\n",
+    "print(\"check\")\n",
+    "tri_graph.initialize(tri_df)\n",
+    "print(tri_graph.getE(1))\n",
+    "print(tri_graph.vertex)\n",
+    "tri_graph.flip([0, 25, 99])\n",
+    "print(tri_graph.vertex)\n",
+    "print(tri_graph.getE(1))"
    ]
   }
  ],
